--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,11 @@
 # datasource
 #
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
+spring.datasource.url=jdbc:oracle:thin:@192.168.1.6:1521:XE
 spring.datasource.username=scott
 spring.datasource.password=tiger
 
 #
 # mybatis config
 #
+# mybatis.config-location=classpath:/mybatis-config.xml
