--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 # datasource
 #
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@192.168.1.6:1521:XE
+# spring.datasource.url=jdbc:oracle:thin:@192.168.1.6:1521:XE
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
 spring.datasource.username=scott
 spring.datasource.password=tiger
 
